--- a/styles/page.css
+++ b/styles/page.css
@@ -1,3 +1,12 @@
 * {
   font-family: sans-serif;
+  margin: 0;
+}
+
+.header {
+  font-size: xxx-large;
+  font-weight: bold;
+  padding: 1rem;
+  background-color: #8e2544;
+  color: white;
 }
