--- a/styles/page.css
+++ b/styles/page.css
@@ -9,6 +9,8 @@
   padding: 1rem;
   background-color: #8e2544;
   color: white;
+  display: flex;
+  justify-content: center;
 }
 
 .content {
@@ -21,6 +23,8 @@
 .topnav {
   background-color: #333;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .topnav a {
