--- a/styles/page.css
+++ b/styles/page.css
@@ -29,6 +29,11 @@
   padding: 10%;
 }
 
+.content.text {
+  padding-top: 2%;
+  font-size: 20px;
+}
+
 .topnav {
   background-color: #333;
   overflow: hidden;
