--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -1,3 +1,5 @@
+@import "colours";
+
 * {
   font-family: sans-serif;
   margin: 0;
@@ -7,7 +9,7 @@
   font-size: xxx-large;
   font-weight: bold;
   padding: 1rem;
-  background-color: #8e2544;
+  background-color: $main-colour;
   color: white;
   display: flex;
   justify-content: center;
@@ -31,32 +33,5 @@
   &.text {
     padding-top: 2%;
     font-size: 20px;
-  }
-}
-
-.topnav {
-  background-color: #333;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-
-  a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    transition: 0.3s;
-
-    &:hover {
-      background-color: #f2f2f2;
-      color: black;
-    }
-
-    .active {
-      background-color: #8e2544;
-      color: white;
-    }
   }
 }
