--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -5,6 +5,15 @@
   margin: 0;
 }
 
+button {
+  margin: 10px;
+  padding: 10px;
+  background-color: $main-colour;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
 .header {
   font-size: xxx-large;
   font-weight: bold;
