--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -24,7 +24,7 @@ header {
   justify-content: center;
 }
 
-.content {
+section {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
