--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -5,6 +5,10 @@ form {
   flex-direction: column;
   padding: 0 15%;
 
+  @media screen and (max-width: 600px) {
+    padding: 0 5%;
+  }
+
   input, textarea {
     display: block;
     margin: 10px;
