--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -49,3 +49,28 @@ section {
     }
   }
 }
+
+.overlay {
+
+    display: none;
+    position: fixed;
+    z-index: 10;
+
+    .background {
+      opacity: 0.7;
+      background-color:#000;
+      width:100%;
+      height:100%;
+      top:0;
+      left:0;
+      position:fixed;
+    }
+
+    img {
+      position: fixed;
+      width: auto;
+      height: 90%;
+      inset: 0;
+      margin: auto;
+    }
+}
