--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -68,8 +68,8 @@ section {
 
     img {
       position: fixed;
-      width: auto;
-      height: 90%;
+      max-width: 90%;
+      max-height: 90%;
       inset: 0;
       margin: auto;
     }
